# ai-native-kitchen

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  doppler.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
config/: providers.yaml
deploy/: README.md
deploy/caddy/: ai-native-kitchen.caddy.example
deploy/nginx/: ai-native-kitchen.conf.example
docs/: CONTRIBUTING.md  vm-deploy.md
references/: sanity-bounds.yaml
src/: __init__.py  auth.py  cache.py  config.py  cost.py  main.py  version.py
src/middleware/: __init__.py  cost_telemetry.py
src/migrations/: 001_cost_log.sql
src/routes/: __init__.py  _unconfigured.py  funding.py  people.py  providers.py  scraping.py  search.py  tech.py  traffic.py  verify.py
src/upstreams/: __init__.py  _base.py
src/upstreams/funding/: __init__.py  _base.py  sec_edgar.py
src/upstreams/people/: __init__.py  _base.py  apollo.py
src/upstreams/scraping/: __init__.py  _base.py  firecrawl.py
src/upstreams/search/: __init__.py  _base.py  exa.py
src/upstreams/tech/: __init__.py  _base.py  wappalyzer_oss.py
src/upstreams/traffic/: __init__.py  _base.py  google_trends.py
src/verification/: __init__.py  _api.py  _contradictions.py  _diversity.py  _sanity.py  _url.py  schemas.py
tests/: test_apollo.py  test_auth.py  test_cache.py  test_compose.py  test_cost.py  test_exa.py  test_firecrawl.py  test_google_trends.py  test_health.py  test_middleware_and_cap.py  test_repo_layout.py  test_routes.py  test_sec_edgar.py  test_upstreams_registry.py  test_verification.py  test_wappalyzer_oss.py
