[project]
name = "ai-native-kitchen"
version = "0.0.0"
description = "Shared infrastructure for the AI-lead skills ecosystem"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Oren Levitin" }]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "httpx>=0.27,<1.0",
    "redis>=5.2,<6.0",
    "asyncpg>=0.30,<1.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.24,<2.0",
    "ruff==0.15.12",
    "httpx>=0.27,<1.0",  # also used as test client
]

# Service code lives in src/ but the directory is empty until PR-2.1 lands the FastAPI
# app. Until then, tell setuptools there are no packages so the editable install works.
# When PR-2.1 lands, switch this to packages = ["src"].
[tool.setuptools]
packages = []

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["node_modules", ".venv"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "S",            # bandit-style security
    "ASYNC",        # async correctness
    "RUF",
]
ignore = [
    "S101",  # asserts allowed in tests
    "E501",  # line length is enforced by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
# Tests can use asserts, fixture "secrets," and subprocess calls
"tests/*" = ["S101", "S105", "S106", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
